feat,refactor: return user on session verification
