# api/docs/api.yaml
@@ -195,8 +195,12 @@ paths:
           schema:
             $ref: "#/components/schemas/Role"
       responses:
-        "204":
+        "200":
           description: Session is valid
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
         "401":
           description: Expired, invalid, or missing access token
           content:
@@ -609,6 +613,22 @@ components:
       description: Refresh token
 
   schemas:
+    User:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        email:
+          type: string
+          format: email
+        role:
+          $ref: "#/components/schemas/Role"
+      required:
+        - id
+        - email
+        - role
+
     PlaylistTrack:
       type: object
       properties:
